--- a/CoreFunction-Debug/CoreFunction-Debug.vcxproj.filters
+++ b/CoreFunction-Debug/CoreFunction-Debug.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="Functions.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="linkNode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
