--- a/GUItest-1/GUItest-1.vcxproj
+++ b/GUItest-1/GUItest-1.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Functions-1.h" />
     <ClInclude Include="MsgAction.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GUItest-1.h" />
